# JniDemo

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: main.cpp  main.h
bserver/: AndroidManifest.xml  CMakeLists.txt  ServerDemo.cpp  build.gradle
bserver/armeabi-v7a/: ServerDemo
bserver/platform/include/binder/: AppOpsManager.h  BinderService.h  BpBinder.h  Debug.h  IAppOpsCallback.h  IAppOpsService.h  IBinder.h  IInterface.h  IMemory.h  IPCThreadState.h  IPermissionController.h  IServiceManager.h  MemoryBase.h  MemoryDealer.h  MemoryHeapBase.h  Parcel.h  PermissionCache.h  ProcessState.h  TextOutput.h
bserver/platform/include/cutils/: atomic-arm.h  atomic-arm64.h  atomic-mips.h  atomic-mips64.h  atomic-x86.h  atomic-x86_64.h  atomic.h  bitops.h  compiler.h  cpu_info.h  debugger.h  fs.h  jstring.h  klog.h  list.h  record_stream.h  sockets.h  str_parms.h  trace.h
bserver/platform/include/libc/: ar.h  assert.h  ctype.h  dirent.h  dlfcn.h  elf.h  errno.h  fcntl.h  fnmatch.h  fts.h  ftw.h  getopt.h  grp.h  inttypes.h  libgen.h  limits.h  link.h  locale.h  malloc.h  mntent.h  netdb.h  nsswitch.h  paths.h  poll.h  pthread.h  pwd.h  regex.h  resolv.h  sched.h  search.h  semaphore.h  setjmp.h  sgtty.h  signal.h  stdatomic.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  (+11 more)
bserver/platform/include/log/: log.h  log_read.h  logd.h  logger.h  logprint.h  uio.h
bserver/platform/include/system/: audio.h  audio_policy.h  camera.h  graphics.h  sound_trigger.h  thread_defs.h  (+1 more)
bserver/server/: IMyService.cpp  IMyService.h  common.h
(+180 files in other folders)
